# mangawatch

./: .gitignore  Dockerfile  README.md  example.json  pyproject.toml  requirements.txt
mangawatch/: core.py
